syntax = "proto3";

package pb;

import "rpc_create_account.proto";

option go_package = "github.com/atalkowski/go-rpc/pb";
// option java_package = "com.bonfonte.proto";


service SimpleBank {
//   rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}

  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {

  }
}